--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Tools for Reproducible Research
+title : Statistical Modeling and Data Visualization
 author :
   name : Nicholas Reich
   email : nick@umass.edu
@@ -45,7 +45,7 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
-  BASE_PATH : http://kbroman.github.io/Tools4RR
+  BASE_PATH : http://nickreich.github.io/methods2
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
@@ -55,7 +55,7 @@ JB :
   #   http://s3.amazonaws.com/yoursite/themes/watermelon
   #   /assets
   #
-  ASSET_PATH : http://kbroman.github.io/Tools4RR/assets/themes/twitter
+  ASSET_PATH : http://nickreich.github.io/methods2/assets/themes/twitter
 
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change them here if needed.
